Добавлено на стартовое окно возможность выбора активной вахты для выполнения последующей фильтрации некоторых данных

--- a/UpaProject/Properties/Settings.settings
+++ b/UpaProject/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LastLogin" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DeafaultChange" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
