--- a/UpaProject/App.config
+++ b/UpaProject/App.config
@@ -39,10 +39,13 @@
         <value />
       </setting>
       <setting name="ConnectionString" serializeAs="String">
-        <value>"Data Source=VGZGRKBUITEX01\\SQLSERVER;Initial Catalog=UPAOborot;Integrated Security=True"</value>
+        <value>"Data Source=АДМИН\\SQLEXPRESS;Initial Catalog=UPAOborot;Integrated Security=True"</value>
       </setting>
       <setting name="LastLogin" serializeAs="String">
         <value />
+      </setting>
+      <setting name="DeafaultChange" serializeAs="String">
+        <value>1</value>
       </setting>
     </UpaProject.Properties.Settings>
   </userSettings>
